# kubertui

./: Cargo.toml  LICENSE
src/: error.rs  files.rs  main.rs
src/app/: cache.rs  events.rs  mod.rs  namespaces_list.rs  pods_list.rs  side_bar.rs
src/app/common/: filterable_list.rs  general_key_handler.rs  mod.rs
src/app/pods_list/: mod.rs  port_forward_popup.rs
src/app/side_bar/: mod.rs  port_forwards.rs  recent_namespaces.rs
src/kubectl/: mod.rs  namespace.rs  pods.rs  port_forward.rs
