[package]
name = "pro-kube"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
